# claude_code_setup

./: .gitignore  CLAUDE.md  README.md  install.sh  plugins.md  settings.template.json  verify.sh
Demo/: .~lock.Ingestion-Team-AI-Led-Demo.pptx#  ARCHITECTURE_GEMINI_PROMPT.md  GEMINI_REDESIGN_PROMPT.md  Ingestion-Team-AI-Led-Demo.pptx  architecture.excalidraw  clean_slide.py  generate_architecture_excalidraw.py  generate_ingestion_deck.py
designs/: 05-cost-budget.md  06-golden-path-replay.md  07-memory-mcp-server.md
hooks/: grep-telemetry-report.sh  log-grep-usage.sh  refresh-mcp-tokens.py  self-heal-stop.sh  statusline.sh  stop-record-cost.sh
mcp-servers/memory-server/: README.md  pyproject.toml
mcp-servers/memory-server/memory_server/: __init__.py  server.py
scripts/: merge-settings.py
skills/_template/: README.md  SKILL.md
skills/airflow/: SKILL.md
skills/airflow/references/: k8s-log-protocol.md  taskflow-patterns.md
skills/avengers/: SKILL.md  bridge.py  dashboard.html  fury_usage.py  iterm2_helper.py  start.sh
skills/bootstrap/: SKILL.md
skills/budget/: SKILL.md
skills/cicd/: SKILL.md
skills/demo/: SKILL.md
skills/docker/: SKILL.md
skills/golden/: SKILL.md
skills/graphify/: SKILL.md
skills/mcp-builder/: SKILL.md
skills/nralert/: SKILL.md
skills/nrql/: SKILL.md
skills/openmetadata/: SKILL.md
skills/profiling/: SKILL.md
skills/pyspark/: SKILL.md
skills/python/: SKILL.md
skills/replay/: SKILL.md
skills/shell/: SKILL.md
skills/sql/: SKILL.md
skills/terraform/: SKILL.md
skills/wrap-up/: SKILL.md
(+70 files in other folders)
